hw/user-app/deploy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: user-profile
  name: user-profile-app
  labels:
    app: otus-hw
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: user-profile-app
  template:
    metadata:
      labels:
        app: user-profile-app
    spec:
      containers:
        - name: web-service
          image: khmel19/otus:user-app
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: actuator
              containerPort: 8282
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: actuator
            initialDelaySeconds: 150
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: actuator
            initialDelaySeconds: 150
            periodSeconds: 10
