hw/user-app/deploy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingres-user-profile
  namespace: user-profile
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-svc.auth-service.svc.cluster.local:8000/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/signin"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User,X-Email,X-UserId,X-Age"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /user/actuator/health
            pathType: Prefix
            backend:
              service:
                name: svc-user-profile
                port:
                  name: actuator
          - path: /profile
            pathType: Prefix
            backend:
              service:
                name: svc-user-profile
                port:
                  name: http
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: svc-user-profile
                port:
                  name: http
